<resources>
    <string name="app_name">Contacts_App</string>
    <string name="save_button_text">Save</string>
    <string name="add_picture">Add picture</string>

    <string name="ic_person">person icon</string>
    <string name="ic_phone">phone icon</string>
    <string name="ic_email">email icon</string>

    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Surname</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
</resources>