<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsAdd">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:tint="@color/black"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#2196F3"
        android:text="@string/save_button_text"
        android:textColor="#000000"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        tools:layout_editor_absoluteX="-9dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/add_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/add_picture"
            android:textColor="#0D27AC"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_pic" />

        <!-- Icons for text fields -->
        <ImageView
            android:id="@+id/ic_person"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ic_person"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_picture"
            app:srcCompat="@drawable/baseline_person_24" />

        <ImageView
            android:id="@+id/ic_phone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/ic_phone"
            app:srcCompat="@android:drawable/stat_sys_phone_call"
            app:tint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/surname_layout"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/ic_email"
            app:tint="@color/black"
            app:srcCompat="@android:drawable/ic_dialog_email"
            app:layout_constraintTop_toBottomOf="@id/phone_layout"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <!-- Text Fields -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@id/ic_person"
            app:layout_constraintTop_toBottomOf="@id/add_picture">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_firstname"
                android:textColor="#676767"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@id/ic_person"
            app:layout_constraintTop_toBottomOf="@id/firstname_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_lastname"
                android:textColor="#676767"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@id/ic_phone"
            app:layout_constraintTop_toBottomOf="@id/surname_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_phone"
                android:textColor="#676767"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@id/ic_email"
            app:layout_constraintTop_toBottomOf="@id/phone_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_email"
                android:textColor="#676767"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>